[lworld] TestNativeClone crashes in PhaseMacroExpand::expand_arraycopy_node() with ZGC

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007fcedacf5069, pid=27668, tid=27691
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+5) (fastdebug build 14-valhalla+5-134)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-valhalla+5-134, mixed mode, tiered, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x122f069] PhaseMacroExpand::expand_arraycopy_node(ArrayCopyNode*)+0xd9

      Current CompileTask:
      C2: 1397 33 !b 4 jdk.internal.reflect.GeneratedMethodAccessor1::invoke (61 bytes)

      Stack: [0x00007fcebc1e2000,0x00007fcebc2e3000], sp=0x00007fcebc2de480, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x122f069] PhaseMacroExpand::expand_arraycopy_node(ArrayCopyNode*)+0xd9
      V [libjvm.so+0x1222e3e] PhaseMacroExpand::expand_macro_nodes()+0xa2e
      V [libjvm.so+0x9d72f0] Compile::Optimize()+0xe10
      V [libjvm.so+0x9d83ee] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xebe
      V [libjvm.so+0x83ccc0] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x110
      V [libjvm.so+0x9e52cc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2cc
      V [libjvm.so+0x9e6268] CompileBroker::compiler_thread_loop()+0x458
      V [libjvm.so+0x17151e6] JavaThread::thread_main_inner()+0x226
      V [libjvm.so+0x171a986] Thread::call_run()+0xf6
      V [libjvm.so+0x143163e] thread_native_entry(Thread*)+0x10e

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: