8235254: [lworld] TestNativeClone crashes in PhaseMacroExpand::expand_arraycopy_node() with ZGC